# SegFormerQuantization

./: .bumpversion.cfg  .gitignore  404.html  CHANGELOG.md  Dockerfile  LICENSE  LICENSES  LICENSES.md  README.md  __version__.py  index.html  makefile  mkdocs.yaml  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/scripts/: gen_mkdocs_docstring_pages.py
.github/workflows/: bump-my-version.yaml  bump-my-version.yml  bump2version.yml  generate-deploy-mkdocs-ghpages.yaml  generate-deploy-mkdocs-ghpages.yml  links-fail-fast.yml  mkdocs.yml  ruff.yml  summarize-jobs-reusable.yaml
CHANGELOG/: index.html
DRD/: index.html
FRD/: index.html
LICENSE/: index.html
LICENSES/: index.html
PRD/: index.html
PoC/: README.md  SegFormer-fine-tune-half-baseline.py  hf-segformer-PoC.ipynb  hf-sf-sceneparse-eval-e2e-wandb.ipynb  hf_pipeline_PoC.ipynb  hf_segformer_PoC.ipynb  hf_segformer_quant_PoC.ipynb  jupytext.toml  requirements_jupymill.txt  requirements_quant.txt  requirements_segformer.txt  segformer-ade20k-overview.ipynb
PoC/reqs/: requirements_segformer.txt
PoC/utils/: utils.py
app/: __version__.py  app.py  config.py
app/utils/: data_processing.py  evaluator.py  general_utils.py  model_loader.py  quantization.py  wandb_utils.py
changelog/: index.html
doc/: DRD.md  PRD.md  SegFormerQuantization.UML.light.txt
docs/: DRD.md  FRD.md  PRD.md  UserStory.md
docs/architecture/: SegFormerQuantization.C4.Code.dark.txt  SegFormerQuantization.C4.Code.light.txt  SegFormerQuantization.C4.System.dark.txt  SegFormerQuantization.C4.System.light.txt
docstrings/: index.html
license/: index.html
licenses/: index.html
notebooks/: segformer-ade20k-overview.ipynb  sf-hf-wnb-cityscapes-quant-overlay.ipynb
pyproject/: index.html
scripts/: gen_mkdocs_docstring_pages.py
search/: search_index.json
src/: __init__.py  __version__.py  app.py  config.py
src/utils/: data_processing.py  evaluator.py  model_loader.py  quantization.py  wandb_utils.py
tests/: README.md  generate_tests_from_DSL.py  test_create_wandb_run.py  test_infer_model.py  test_load_base_model.py  test_model_loading.py  test_print_model_sizes.py
tests/DSL/: test_model.yaml
tests/test_generated_from_DSL/: test_model_loading_generated.py  test_model_quantizing_generated.py  test_model_saving_generated.py
