[project]
version = "0.5.8"
name = "segformer-quantization-pipeline"
description = "An end-to-end quantization evaluation pipeline for SegFormer models on semantic segmentation tasks"
authors = [
    {name = "qte77", email = "qte@77.gh"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "transformers==4.44.0",
    "evaluate==0.4.2",
    "quanto>=0.2.0",
    "optimum-quanto>=0.2.0",
    "wandb==0.17.8",
    "pillow>=11.0.0",
    "datasets>=2.0.0",
    "accelerate==0.33.0",
]

# https://docs.astral.sh/uv/concepts/projects/dependencies/#optional-dependencies
# [project.optional-dependencies]

# Dependency groups
# https://docs.astral.sh/uv/concepts/projects/dependencies/#development-dependencies
# By default, uv includes the dev dependency group in the environment
# https://docs.astral.sh/uv/concepts/projects/dependencies/#default-groups
[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.8.0",
    "git-changelog>=2.5.2"
]
docs = [
    "griffe>=1.5.1",
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.9.3",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.5.44",
    "mkdocs-section-index>=0.3.8",
    "mkdocstrings>=0.27.0",
    "mkdocstrings[python]"
]

[tool.uv]
package = false
exclude-newer = "2024-12-21T00:00:00Z"

# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
target-version = "py311"
src = ["scripts", "src", "tests"]
extend-exclude = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = [
    "E203",  # Whitespace before ':'
#    "MD024", # no-duplicate-heading
#    "W503",  # unknown to ruff? Line break before binary operator
]
unfixable = ["B"]

[tool.bumpversion]
current_version = "0.5.8"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
allow_dirty = false
ignore_missing_version = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/__version__.py"
search = '__version__: str = "{current_version}"'
replace = '__version__: str = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = "![version](https://img.shields.io/badge/version-{current_version}-8A2BE2)"
replace = "![version](https://img.shields.io/badge/version-{new_version}-8A2BE2)"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = """
## [Unreleased]

---
"""
replace = """
## [Unreleased]

---

## [{new_version}] - {now:%Y-%m-%d}
"""
